Fixed base line height to correctly align 20 pixel to 13 pixel font size.

--- a/src/styles/global/_base.scss
+++ b/src/styles/global/_base.scss
@@ -24,7 +24,6 @@ body {
   background-clip: padding-box;
   background-color: $background;
   height: 100%;
-  font: normal $base-font-size $font-sans-serif;
 }
 
 body {
