--- a/src/styles/global/_variables.scss
+++ b/src/styles/global/_variables.scss
@@ -19,9 +19,6 @@
  *
  */
 
-// ** Custom Variables **
-// --------------------------------------------------
-
 // general
 $background: #e5e5e5;
 $componentbg: #f5f5f5;
@@ -46,7 +43,7 @@ $loading: #ddd;
 // font
 $font-sans-serif: "Helvetica Neue",Helvetica,Arial,sans-serif;
 $base-font-size: 13px; // compass
-$base-line-height: 19px; // compass
+$base-line-height: 1.53846156; // compass
 
 // audio video
 $audiovideolevel: $action-enable;
@@ -125,44 +122,27 @@ $breakpoint-useability-large: 1020px;
 $breakpoint-small: 480px;
 $breakpoint-medium: 700px;
 $breakpoint-large: 1280px;
-
 $breakpoint-video-small: 590px;
 $breakpoint-video-medium: 630px;
-
 $breakpoint-chat-small: 210px;
-
 $breakpoint-settings-medium: 630px;
 
 // touch specific
 $tap-highlight: rgba(0, 0, 0, 0);
 
-
-
-// ** Fontawsome changed variables **
+// Fontawsome changed variables
 // original at libs/fontawesome/_variables.scss
-// --------------------------
-$fa-css-prefix:       fa;
+$fa-css-prefix: fa;
 
-
-// ** Bootstrap changed variables **
+// Bootstrap changed variables
 // original at libs/bootstrap/_variables.scss
-// --------------------------------------------------
+$body-bg: $background;
 
-//== Scaffolding
-//
-// ## Settings for some of the most global styles.
-
-//** Background color for `<body>`.
-$body-bg:               $background;
-
-//== Typography
-//
-//## Font, line-height, and color for body text, headings, and more.
-
+// typography
+// font, line-height, and color for body text, headings, and more
 $font-family-sans-serif:  $font-sans-serif;
 $font-family-serif:       Georgia, "Times New Roman", Times, serif;
-//** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 $font-family-base:        $font-family-sans-serif;
-
 $font-size-base:          $base-font-size;
+$line-height-base:        $base-line-height;
